# Grand-feed

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily_pipelines.yml
config/: secrets.yaml.example
intel_feed/: __init__.py  config.py  db.py  models.py
intel_feed/collectors/: __init__.py  blind.py  hackernews.py  newsapi.py  reddit.py
intel_feed/core/: __init__.py  base_collector.py  base_output.py  base_processor.py  pipeline.py  registry.py
intel_feed/outputs/: __init__.py  database.py  email_digest.py
intel_feed/processors/: __init__.py  ai_classifier.py  dedup.py  keyword_filter.py  sentiment.py
intel_feed/templates/: email_digest.html
pipelines/: amazon-intel.yaml  side-projects.yaml
scripts/: run_all.py  run_pipeline.py
